docs: add product north star to CLAUDE.md, README, and UI header

--- a/public/index.html
+++ b/public/index.html
@@ -474,7 +474,7 @@
     <div class="logo-dot"></div>
     <div>
       <div class="logo-text">Athens Monitor</div>
-      <div class="logo-sub">Attica Incident Intelligence</div>
+      <div class="logo-sub">Συμβαίνει κάτι τώρα στην Αθήνα που αλλάζει τη μέρα σου;</div>
     </div>
   </div>
   <div class="header-right">
